--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <ul class="c-navbar">
             <li class="c-navbar_center">Beside the park</li>
             <li class="c-navbar_right">
-                <button class="o-navbar_search_button"><img src="img/glass.png" id="js-button--search"
+                <button class="o-navbar_search_button"><img src="img/glass.png" alt="Search button" id="js-button--search"
                                                             class="c-navbar_right_button--search"></button>
                 <span class="_add-spacing">
-              <button class="o-navbar_menu_button"><img src="img/strips.png"
+              <button class="o-navbar_menu_button"><img src="img/strips.png" alt="Menu button"
                                                         class="c-navbar_right_button--menu"></button></span>
             </li>
             <li id="search" class="c-navbar_right js-invisible slide_left">
@@ -36,8 +36,8 @@
             </div>
         </div>
     </section>
-    <div class="o-phone js-items-to-slide"><img src="img/phone.png" class="o-phone--sizeing"></div>
-    <section class="c-secondsection">
+    <div class="o-phone js-items-to-slide"><img src="img/phone.png" alt="Phone image" class="o-phone--sizeing"></div>
+    <div class="c-secondsection">
         <div class="c-secondsection--header">Lorem ipsum</div>
         <div class="c-secondsection--paragraphs u-flex">
             <div class="c-secondsection--firstparagraphs">
@@ -62,8 +62,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="c-thirdsection">
+    </div>
+    <div class="c-thirdsection">
         <div class="c-thirdsection_first_row u-flex js-items-to-slide">
             <div class="c-thirdsection--color1"><span class="c-thirdsection--header">Build to last</span>
                 <p class="c-thirdsection--paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -87,7 +87,7 @@
                     more</a>
             </div>
         </div>
-    </section>
+    </div>
 </div>
 <script src="js/main.js"></script>
 </body>
