--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/master.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 <body>
 <div id="loader_img" class="o-loader-img js-sliding_in"><img src="img/welcome.jpg" alt="Welcome Picture"></div>
