--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <div id="loader_img" class="o-loader-img js-sliding_in"><img src="img/welcome.jpg" alt="Welcome Picture"></div>
 <div id="loaded_content" class="o-main-coponent js-appear">
     <nav>
-        <ul class="c-navbar">
-            <li class="c-navbar_center">Beside the park</li>
-            <li class="c-navbar_right">
+        <ul class="c-navbar nav">
+            <li class="c-navbar_center nav-li">Beside the park</li>
+            <li class="c-navbar_right nav-li">
                 <button class="o-navbar_search_button"><img src="img/glass.png" alt="Search button" id="js-button--search"
                                                             class="c-navbar_right_button--search"></button>
                 <span class="_add-spacing">
               <button class="o-navbar_menu_button"><img src="img/strips.png" alt="Menu button"
                                                         class="c-navbar_right_button--menu"></button></span>
             </li>
-            <li id="search" class="c-navbar_right js-invisible slide_left">
+            <li id="search" class="c-navbar_right js-invisible slide_left nav-li">
                 <input type="text" name="search" placeholder="Search...">
             </li>
             <li id="menu" class="c-navbar_center inactive-display u-centered">My Menu</li>
